[tool.poetry]
name = "ml1"
version = "0.1.0"
description = ""
authors = ["dqmis <dom.seputis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.10"
matplotlib = "^3.8.0"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
scipy = "^1.11.3"
cvxopt = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
